5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4467/executions/1573_1559.log
== TEST (2019-03-27 15:47:25) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(.upper("ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA."))
-- ERROR:
File "XXXX", line 2
    print(.upper("ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA."))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:47:36) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(.upper("Ada Lovelace foi a primeira programadora da historia."))
-- ERROR:
File "XXXX", line 2
    print(.upper("Ada Lovelace foi a primeira programadora da historia."))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:51:16) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(()"Ada Lovelace foi a primeira programadora da historia.".upper))
-- ERROR:
File "XXXX", line 2
    print(()"Ada Lovelace foi a primeira programadora da historia.".upper))
                                                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 15:51:18) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(()"Ada Lovelace foi a primeira programadora da historia.".upper))
-- EXECUTION TIME:
0.185873
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 2
    print(()"Ada Lovelace foi a primeira programadora da historia.".upper))
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:53:49) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia.".upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 15:53:51) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia.".upper())
-- EXECUTION TIME:
0.156344
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
